packages/components/Keyboard/css/Keyboard.css
/* @import 'CandidateBox.css'; */

.mb-keyboard-default {
  position: fixed;
  bottom: 0;
  right: 0;
  left: 0;
  user-select: none;
  overflow: hidden;
  background-color: $neutral100;
  padding: 1px;
  font-size: 15px;

  /* When using option "useButtonTag" */
  & button.mb-button {
    border-width: 0;
    outline: 0;
    font-size: inherit;
  }

  & .mb-row {
    display: flex;

    &:not(:last-child) {
      margin-bottom: 2px;
    }

    & .mb-button:not(:last-child) {
      margin-right: 2px;
    }

    & .mb-button-container {
      margin-right: 2px;
    }

    & > div:last-child {
      margin-right: 0;
    }

    & > div:last-child {
      margin-right: 0;
    }

    & .mb-button-container {
      display: flex;
    }
  }

  & .mb-button {
    display: inline-block;
    flex-grow: 1;
    cursor: pointer;
    height: 34px;
    box-sizing: border-box;
    padding: 5px;
    background: white;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;

    & span {
      pointer-events: none;
    }

    &.mb-standard-btn {
      width: 20px;
    }

    &.mb-active {
      background: $neutral50;
    }

    &.mb-standard-btn[data-mb-key='@'] {
      max-width: 60px;
    }

    &[data-mb-key='{space}'] {
      color: $neutral600;
    }

    &[data-mb-key='{symbols}'],
    &[data-mb-key='{altback}'] {
      width: 24px;
      font-size: 13px;
      letter-spacing: 0.5px;
      padding: 2px 0;
    }

    &[data-mb-key='{alt}'],
    &[data-mb-key='{default}'] {
      width: 36px;
      padding: 2px 0;
    }

    &[data-mb-key='{shift}'],
    &[data-mb-key='{enter}'] {
      background-repeat: no-repeat;
      background-position: 50%;
      color: transparent;
    }

    &[data-mb-key='{enter}'] {
      max-width: 55px;
      background-image: url(../assets/stonePowerSymbol.png);
      background-size: 33%;
      background-color: $green500;
      border-radius: 0 0 12px 0;
    }

    &[data-mb-key='{shift}'] {
      width: 30px;
      background-image: url(../assets/shift.png);
      background-size: 16px auto;
    }

    &[data-mb-key='{backspace}'] {
      & span {
        width: 22px;
        height: 16px;
        display: block;
        background-color: currentcolor;
        mask-image: url(../assets/delete.svg);
        mask-size: contain;
        mask-repeat: no-repeat;
        mask-position: center;
        color: $neutral800;
      }
    }
  }

  &.mb-layout-numeric .mb-button {
    width: 33.3%;
    height: 60px;
    align-items: center;
    display: flex;
    justify-content: center;
  }
}

